@@ -3,14 +3,14 @@ Hash: SHA256
 
 AUX fast_xs-0.8.0+ruby-1.9.patch 1090 SHA256 5f4b59f7ae2aac87377d37d9124430ca752cfda0348a308464a1d06800aa8518 SHA512 0c4f4b03db6ed70381b9aa7e671038206648a2c88211bb7d015f552e2114015a7cb749678670ee876aa568505ac3df42535f839367cfd1fc52ba6674429940a5 WHIRLPOOL ff0156914c5b8b0239030d307d7438c5b398a388d8206b63d15ad26fb600d62839a167c73589bfaf08c4fdc0499bcfbb1b69cf68ee702e5e0210cab4c9b76e5a
 DIST fast_xs-0.8.0.gem 22016 SHA256 5ff2e1b088bdad3d4eae2a71b118b8aa9b39975702853c3bb307e35db1facdc7 SHA512 55fc2704fab020f03b1ce138d1631dd5ad73a8601dcd95989a59c7cccb490c70b4e1af59fb8b009bfa0899f2c23feb42cc3068e243cd539ba1cb01a9f7bc573b WHIRLPOOL e29bd2abf334e85809abb830968d9850439a5c50767aee0718ad5967c26b6ca9c9d7a9661a0bfc78a85e425634e69d6cac859eb59e8f57e29c481c8ca6969e3d
-EBUILD fast_xs-0.8.0-r1.ebuild 1525 SHA256 e5f84cdc36239f49e478ed5337d946ac4b365a08d374d3c164a02f9492a4944e SHA512 ec649eb59409a50c36003513e997adab6203d75dc15f665767f561d8b04b73763e71cbbbb621f859907ffc327ade35494fed21aad94da841c573aa2cb98249ee WHIRLPOOL e24e119d501d11972d14a2877f29afc5065794c009112070795a53bf0efd8f29df4324f84f3a9987527df3b258c55e4b437fffca17d51f23b03ba525e9713e99
+EBUILD fast_xs-0.8.0-r1.ebuild 1522 SHA256 03da86ee8ac24e31c255fe2a024567391a417c7ca4a645077030dfe8ca8c17df SHA512 09c2d16812ab421246658e7916efe4fba18dc89d621d2ece8ef3f1e7b9ce716ffd3636c4e166b7809035ad16d14602b532cd0cccc4aa92412f825abf739dcdad WHIRLPOOL 94cb30a5ee070302a920fc0000de58bfee8f6173f5d819d8cbd5510d6cf546d211eda6891afd34cbbedb58e70374075b536c0714bcf335edf9def2a60b23bccc
 EBUILD fast_xs-0.8.0.ebuild 1597 SHA256 2ecf83459a8375a251e706cab076ec153ade99427a192d063d3104b4886aef05 SHA512 cd69861ff5686f9cf7b86d2d11b5cb4aec016758cf682281110e05058bd01d0cb3a4da7cf062653c2772d08145b8c5c33c138ccac4b627946984f56d97e8d777 WHIRLPOOL 9d8f72a8e9561cc43bf73aa02782ba54877a3414b1d9c2cf003f4b7a906bdc730c103dba7cd994499f58aed23539865d48bad5544d384a97acb63756e13ed300
-MISC ChangeLog 2702 SHA256 1e241e9076f0ffed1e8d7ddc44f2712421c0ee7380f48237722a44f92411b572 SHA512 94c71e8cf8659118ab241ea5430c947f22e777c24b66414786fc32fc4c6786496463ff0a281306a973d883e691cb469ee10f21b09bbf95ba34b647bf8325e49a WHIRLPOOL 39472f2c28f6ad87d654ee5252bd2578862df1aba39fa5b8070f15e85755116c1dca84749965a1e3f05be8b95c6f54e4388f78cfc17f7efc1f76735c6f69887e
+MISC ChangeLog 2805 SHA256 c87bea40ebbce580a61aeb357ba40a85798f6980d62c8013bb714a4c56e18545 SHA512 2d8f183451a2f466cb82bcc4c51d2eb078a933835423dad50db635438b1dd602624fb2fa62f79a71e01734ea7ead481f82b822d28c3edf1c303c30367f27676d WHIRLPOOL e60e305fb789f49d9aaad3995d341514b9bd796aa5e19d49d95cdadd92f1c4f19c2018d0f8bd2b2dbf279ecaef167357d3fd86d07019f54c1dfc8d3fefc6d9dc
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlK8faQACgkQkKaRLQcq0GJ5agCdEwurAO6uMyyksTAJDNMl/5gc
-BZYAoLPLx7ycqrk2mk1sD2HozoFN4yU/
-=9UiD
+iEYEAREIAAYFAlLROl4ACgkQVWmRsqeSphMc1wCfaYaGDBNrxJncv6x43+ApUxhV
+0HwAn2/ckzBU+wMRygyqA46ySXKH01sB
+=3kH8
 -----END PGP SIGNATURE-----
